--- a/data/sources/gdg-prague.yaml
+++ b/data/sources/gdg-prague.yaml
@@ -19857,14 +19857,14 @@ series:
           • How to join?Online only because of covid https://discord.gg/TnaMJMyTDw • What we''ll dohttps://sites.google.com/site/garagepragueone/home...
 
 
-          https://www.meetup.com/gdgprague/events/xqcsqsyfccbfb/'
+          https://www.meetup.com/gdgprague/events/290332682/'
         location: Online event
         geo:
           lat: 50.08
           lon: 14.43
         status: CONFIRMED
         uid: event_xqcsqsyfccbfb@meetup.com
-        url: https://www.meetup.com/gdgprague/events/xqcsqsyfccbfb/
+        url: https://www.meetup.com/gdgprague/events/290332682/
         dtstart: 2023-01-03 18:30:00+01:00
         dtend: 2023-01-03 20:30:00+01:00
   - meetupcom:
@@ -21859,6 +21859,30 @@ series:
         url: https://www.meetup.com/gdgprague/events/xqcsqsyfccbpc/
         dtstart: 2023-01-31 18:30:00+01:00
         dtend: 2023-01-31 20:30:00+01:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: GDG Garage Prague One
+        description: 'GDG Prague
+
+          Tuesday, December 6 at 6:30 PM
+
+
+          • How to join?Online only because of covid https://discord.gg/TnaMJMyTDw • What we''ll dohttps://sites.google.com/site/garagepragueone/home...
+
+
+          https://www.meetup.com/gdgprague/events/289793756/'
+        location: Online event
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_xqcsqsydcqbjb@meetup.com
+        url: https://www.meetup.com/gdgprague/events/289793756/
+        dtstart: 2022-12-06 18:30:00+01:00
+        dtend: 2022-12-06 20:30:00+01:00
   - meetupcom:
       meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
       og_title: Login to Meetup | Meetup
