--- a/data/sources/ruby-praha.yaml
+++ b/data/sources/ruby-praha.yaml
@@ -8970,14 +8970,14 @@ series:
           Wednesday, January 4 at 7:00 PM
 
 
-          https://www.meetup.com/praguerb/events/dkmktfyfccbgb/'
+          https://www.meetup.com/praguerb/events/290352816/'
         location: null
         geo:
           lat: 50.08
           lon: 14.43
         status: CONFIRMED
         uid: event_dkmktfyfccbgb@meetup.com
-        url: https://www.meetup.com/praguerb/events/dkmktfyfccbgb/
+        url: https://www.meetup.com/praguerb/events/290352816/
         dtstart: 2023-01-04 19:00:00+01:00
         dtend: 2023-01-04 22:00:00+01:00
   - meetupcom:
@@ -13075,6 +13075,27 @@ series:
         url: https://www.meetup.com/praguerb/events/dkmktfyfcgbhb/
         dtstart: 2023-04-05 19:00:00+02:00
         dtend: 2023-04-05 22:00:00+02:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: First Wednesday Of The Month - Ruby
+        description: 'Prague.rb / CSRUG
+
+          Wednesday, December 7 at 7:00 PM
+
+
+          https://www.meetup.com/praguerb/events/289815686/'
+        location: null
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_dkmktfydcqbkb@meetup.com
+        url: https://www.meetup.com/praguerb/events/289815686/
+        dtstart: 2022-12-07 19:00:00+01:00
+        dtend: 2022-12-07 22:00:00+01:00
   - meetupcom:
       meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
       og_title: Login to Meetup | Meetup
