data: cron update

--- a/data/sources/pjsdc.yaml
+++ b/data/sources/pjsdc.yaml
@@ -42641,3 +42641,51 @@ series:
         url: https://www.meetup.com/prague-junior-software-developer-course/events/290016302/
         dtstart: 2022-12-12 18:00:00+01:00
         dtend: 2022-12-12 20:00:00+01:00
+  - meetupcom:
+      meta_description: V rámci **Dne otevřených dveří** tě necháme nakouknout do našich nových učeben. Zatím jsme je ještě skoro nikomu neukázali, takže budeš mezi prvními. Ale hlavně se seznámíš
+      og_title: Den otevřených dveří aneb navštiv doupě ajťáků!, Sat, Jan 14, 2023, 10:00 AM   | Meetup
+      url: https://www.meetup.com/prague-junior-software-developer-course/events/290418619/
+      ical:
+        summary: Den otevřených dveří aneb navštiv doupě ajťáků!
+        description: 'Become a software developer from 0
+
+          Saturday, January 14 at 10:00 AM
+
+
+          V rámci **Dne otevřených dveří** tě necháme nakouknout do našich nových učeben. Zatím jsme je ještě skoro nikomu neukázali, takže budeš mezi prvními. ...
+
+
+          https://www.meetup.com/prague-junior-software-developer-course/events/290418619/'
+        location: Green Fox Academy (Václavské nám. 11, Nové Město, Praha-Praha 1, Czech Republic 110 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_290418619@meetup.com
+        url: https://www.meetup.com/prague-junior-software-developer-course/events/290418619/
+        dtstart: 2023-01-14 10:00:00+01:00
+        dtend: 2023-01-14 17:00:00+01:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: 'Online informační schůzka: Jak nastartovat kariéru v IT od nuly?'
+        description: 'Become a software developer from 0
+
+          Monday, December 12 at 6:00 PM
+
+
+          Chceš do IT, ale nevíš, jaká specializace by ti sedla? Tápeš ve specializacích, které nabízíme? Přemýšlíš, že bys začal/a splácet školné až po kurzu a...
+
+
+          https://www.meetup.com/prague-junior-software-developer-course/events/290016302/'
+        location: Online event
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_290016302@meetup.com
+        url: https://www.meetup.com/prague-junior-software-developer-course/events/290016302/
+        dtstart: 2022-12-12 18:00:00+01:00
+        dtend: 2022-12-12 20:00:00+01:00
