--- a/data/sources/pjsdc.yaml
+++ b/data/sources/pjsdc.yaml
@@ -41106,9 +41106,9 @@ series:
         dtstart: 2022-12-12 18:00:00+01:00
         dtend: 2022-12-12 20:00:00+01:00
   - meetupcom:
-      meta_description: Zúčastni se bezplatného online workshopu, kde si se zkušenými mentory vyzkoušíš práci s technologiemi webových stránek skrze společné vytvoření jednoduché hry pro dva hráče
-      og_title: 'Online workshop: Základy programování, Tue, Dec 20, 2022, 6:00 PM   | Meetup'
-      url: https://www.meetup.com/prague-junior-software-developer-course/events/290016316/
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
       ical:
         summary: 'Online workshop: Základy programování'
         description: 'Become a software developer from 0
