--- a/data/sources/pjsdc.yaml
+++ b/data/sources/pjsdc.yaml
@@ -42761,3 +42761,27 @@ series:
         url: https://www.meetup.com/prague-junior-software-developer-course/events/290016316/
         dtstart: 2022-12-20 18:00:00+01:00
         dtend: 2022-12-20 21:00:00+01:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: 'Online workshop: Základy programování'
+        description: 'Become a software developer from 0
+
+          Tuesday, December 20 at 6:00 PM
+
+
+          Zúčastni se bezplatného online workshopu, kde si se zkušenými mentory vyzkoušíš práci s technologiemi webových stránek skrze společné vytvoření jednod...
+
+
+          https://www.meetup.com/prague-junior-software-developer-course/events/290016316/'
+        location: Online event
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_290016316@meetup.com
+        url: https://www.meetup.com/prague-junior-software-developer-course/events/290016316/
+        dtstart: 2022-12-20 18:00:00+01:00
+        dtend: 2022-12-20 21:00:00+01:00
