--- a/data/sources/pyvo-praha.yaml
+++ b/data/sources/pyvo-praha.yaml
@@ -9737,9 +9737,9 @@ series:
         dtstart: 2022-07-20 19:00:00+02:00
         dtend: 2022-07-20 23:59:00+02:00
   - meetupcom:
-      meta_description: Hou hou hou Vánoční Pyvo je tu! 🎄 Také máte doma šuplík plný HW pokladů, udělátek, hejblátek, tlačítek, tišťáků, robotů, her, konzolí, Arduin a jiného zábavného balastu? R
-      og_title: 'Pyvo Prague #139 - Christmas Hardware Edition, Wed, Dec 21, 2022, 7:00 PM   | Meetup'
-      url: https://www.meetup.com/pyvo-prague-python-meetup/events/bcxlssydcqbcc/
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
       ical:
         summary: 'Pyvo Prague #139 - Christmas Hardware Edition'
         description: 'Pyvo: Prague Python Meetup
@@ -15777,3 +15777,27 @@ series:
         url: https://www.meetup.com/pyvo-prague-python-meetup/events/289217222/
         dtstart: 2022-11-16 19:00:00+01:00
         dtend: 2022-11-16 23:59:00+01:00
+  - meetupcom:
+      meta_description: We will meet for an informal chat about Python, programming, and more. Details will be added.
+      og_title: 'Pyvo Prague #, Wed, Apr 19, 2023, 7:00 PM   | Meetup'
+      url: https://www.meetup.com/pyvo-prague-python-meetup/events/bcxlssyfcgbzb/
+      ical:
+        summary: 'Pyvo Prague #'
+        description: 'Pyvo: Prague Python Meetup
+
+          Wednesday, April 19 at 7:00 PM
+
+
+          We will meet for an informal chat about Python, programming, and more. Details will be added.
+
+
+          https://www.meetup.com/pyvo-prague-python-meetup/events/bcxlssyfcgbzb/'
+        location: Prague (, Prague, Czech Republic)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_bcxlssyfcgbzb@meetup.com
+        url: https://www.meetup.com/pyvo-prague-python-meetup/events/bcxlssyfcgbzb/
+        dtstart: 2023-04-19 19:00:00+02:00
+        dtend: 2023-04-19 23:59:00+02:00
